--- a/booking.html
+++ b/booking.html
@@ -122,6 +122,7 @@
                             <div class="col-md-12 form-group contact-forms">
                                 <select name="Тур" class="form-control" id="#">
                                     <option>Тур</option>
+                                    <option>Вино</option>
                                     <option>Грузия</option>
                                     <option>Tik Tok pati</option>
                                     <option>Одесса</option>
