--- a/page-wine.html
+++ b/page-wine.html
@@ -113,7 +113,7 @@
                             <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
                             <span class="txt-alg-jf">
                              18+. Регистрация обязательна!<br/>
-                             
+                             Трансфер не входит в стоимость.
                             </span>
                         </div>
                         <!-- Alert info -->
@@ -180,7 +180,7 @@
 
                         
                         <!-- Описание экскурсии -->
-
+                      <!--
                         <div class="accordion mt-3 mb-3" id="accordionExample">
                             <div class="card">
                                 <div class="card-header" id="headingOne">
@@ -212,9 +212,9 @@
                                 </div>
                             </div>
                         </div>
-
+                       -->
                         <!-- //Описание экскурсии -->
-
+                      <!--
                         <div class="alert alert-success">
                             <h5 class="alert-heading">В стоимость входит:</h5>
                             <ul class="list-group list-group-flush">
@@ -252,6 +252,7 @@
                                 </li>
                                 <ul>
                         </div>
+                      -->
                       <!-- <div id="liqpay_checkout"></div>-->
                     </div>
                 </div>
