--- a/page-wine.html
+++ b/page-wine.html
@@ -178,6 +178,24 @@
                         </ul>
                         </p>
 
+                         <ul class="list-group listing">
+                            <li class="list-group-item active"> Расписание экскурсий: </li>
+                            <li class="list-group-item">  <br /> <span
+                                    class="fa fa-calendar mr-2"></span> 14.02.2021 - 21.02.2021 </li>
+                            <li class="list-group-item">  <br /> <span
+                                    class="fa fa-calendar mr-2"></span> 20.03.2021 - 27.03.2021 </li>
+                            <li class="list-group-item">  <br /> <span
+                                    class="fa fa-calendar mr-2"></span> 28.03.2021 - 04.04.2021</li>
+                            <li class="list-group-item"> <br /> <span
+                                    class="fa fa-calendar mr-2"></span> 01.05.2021 - 08.05.2021 </li>
+                            <li class="list-group-item"> <br /> <span
+                                    class="fa fa-calendar mr-2"></span> 01.05.2021 - 08.05.2021 </li>
+                            <li class="list-group-item"> <br /> <span
+                                    class="fa fa-calendar mr-2"></span> 15.05.2021 - 21.05.2021 </li>
+                            20 и 27 Марта
+3, 10 , 17, 24 Апреля
+1, 8 , 15, 22, 29 Мая
+                        </ul>
                         
                         <!-- Описание экскурсии -->
                       <!--
