--- a/page-wine.html
+++ b/page-wine.html
@@ -132,7 +132,7 @@
                         <ul class="listing">
                             <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>360 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
-                            <li><span class="fa fa-map-marker mr-2"></span>Адрес: <span>ул.Зачиняева, 158А </span></li>
+                            <li><span class="fa fa-map-marker mr-2"></span>Адрес: <span>г.Запорожье, ул.Зачиняева, 158А </span></li>
                         </ul>
                         <br>
                         <p>
