--- a/page-wine.html
+++ b/page-wine.html
@@ -133,9 +133,9 @@
                             <li><span class="fa fa-tags mr-2"></span> Стоимость: <span>360 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span>1 День</span></li>
                             <li><span class="fa fa-map-marker mr-2"></span> Адрес: <span>г.Запорожье, ул.Зачиняева, 158А </span></li>
-                            <li><span class="fa fa-bus"></span> Маршрутки: <span> 61, 82, 95</span></li>
-                            <li><span class="fa fa-bus"></span> Автобус: <span>17</span></li>
-                            <li><span class="fa fa-bus"></span> Тролейбус: <span>11</span></li>
+                            <li><span class="fa fa-bus mr-2"></span> Маршрутки: <span> 61, 82, 95</span></li>
+                            <li><span class="fa fa-bus mr-2"></span> Автобус: <span>17</span></li>
+                            <li><span class="fa fa-bus mr-2"></span> Тролейбус: <span>11</span></li>
                         </ul>
                         <br>
                         <p>
