--- a/page-wine.html
+++ b/page-wine.html
@@ -112,7 +112,7 @@
                         <div class="alert alert-danger mt-3 ">
                             <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
                             <span class="txt-alg-jf">
-                             18+. Регистрация обязательна!<br/>
+                             <span class="badge badge-danger">18+</span> Регистрация обязательна!<br/>
                              Трансфер не входит в стоимость.
                             </span>
                         </div>
