--- a/page-wine.html
+++ b/page-wine.html
@@ -113,7 +113,7 @@
                             <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
                             <span class="txt-alg-jf">
                              <span class="badge badge-danger">18+</span> Регистрация обязательна!<br/>
-                             Трансфер не входит в стоимость.
+                             Трансфер в стоимость <strong>не входит.</strong>
                             </span>
                         </div>
                         <!-- Alert info -->
