--- a/page-wine.html
+++ b/page-wine.html
@@ -111,8 +111,8 @@
                         <!-- Alert danger -->
                         <div class="alert alert-danger mt-3 ">
                             <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
-                            <span class="txt-alg-jf">
-                             <span class="badge badge-danger">18+</span> Регистрация обязательна!<br/>
+                            
+                             <span class="badge badge-danger">18+</span> <span>Регистрация обязательна!
                              Трансфер в стоимость <strong>не входит.</strong>
                             </span>
                         </div>
