--- a/page-wine.html
+++ b/page-wine.html
@@ -113,7 +113,7 @@
                             <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
                             
                              <span class="badge badge-danger">18+</span> <span>Регистрация обязательна!
-                             Трансфер в стоимость <strong>не входит.</strong>
+                             Трансфер в стоимость не входит.
                             </span>
                         </div>
                         <!-- Alert info -->
