--- a/page-wine.html
+++ b/page-wine.html
@@ -130,7 +130,7 @@
                             </span>
                         </div>
                         <ul class="listing">
-                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span>360 Грн.</span></li>
+                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span>300-360 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span>1 День</span></li>
                             <br/>
                             <li><span class="fa fa-bus mr-2"></span> Маршрутки: <span> 61, 82, 95</span></li>
