--- a/page-wine.html
+++ b/page-wine.html
@@ -93,7 +93,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>Марта-Май 2021 Года</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>Март-Май 2021 Года</span>
                                 </li>
                             </ul>
                         </div>
