--- a/page-wine.html
+++ b/page-wine.html
@@ -186,6 +186,8 @@
                          <ul class="list-group listing">
                             <li class="list-group-item active"> Расписание экскурсий: </li>
                             <li class="list-group-item">
+                               <span class="fa fa-calendar mr-2"></span> 20 Марта 2021 </li>
+                            <li class="list-group-item">
                                <span class="fa fa-calendar mr-2"></span> 27 Марта 2021 </li>
                             <li class="list-group-item">  <span
                                     class="fa fa-calendar mr-2"></span> 03 Апреля 2021 </li>
