--- a/packages.html
+++ b/packages.html
@@ -87,13 +87,13 @@
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             <div class="row">
        
-                <!--  Грузия -->
+                <!--  Вино -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-wine.html">
                             <img src="images/wine-min.jpg" alt="Wine" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>360грн.</span>/p>
+                        <p><span class="fa fa-tags"></span> <span>360грн.</span></p>
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
@@ -107,9 +107,9 @@
                         </ul>
                     </div>
                 </div>
-                <!--  //Грузия  -->
+                <!--  //Вино -->
 
-                <!--  Вино -->
+                <!--  Грузия -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-Georgia.html">
@@ -129,7 +129,7 @@
                         </ul>
                     </div>
                 </div>
-                <!--  //Вино  -->
+                <!--  //Грузия  -->
 
                 <!--  Кофе -->
                 <div class="col-lg-3 col-sm-6 mb-5">
