--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -259,20 +259,20 @@
                         <!-- owl-carousel -->
                <div class="owl-carousel owl-theme" style="width:90%; margin: 0 auto; padding-bottom: 30px;">
                   <div>
-                    <img src="/images/LOL/lol-1.jpg" alt="Luminary" class="img-fluid abt-image" />
+                    <img src="/images/Limonary/Limonary-1.jpg" alt="Luminary" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src=" /images/LOL/lol-2.jpg " alt="Luminary" class="img-fluid abt-image" />
+                    <img src=" /images/Limonary/Limonary-2.jpg " alt="Luminary" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="/images/LOL/lol-3.jpg" alt="Limonary" class="img-fluid abt-image" />
+                    <img src="/images/Limonary/Limonary-3.jpg" alt="Limonary" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="/images/LOL/lol-4.jpg" alt="Limonary" class="img-fluid abt-image" />
+                    <img src="/images/Limonary/Limonary-4.jpg" alt="Limonary" class="img-fluid abt-image" />
                   </div>
                   
                   <div>
-                    <video src="/images/LOL/lol-5.mp4" alt="Limonary" class="img-fluid abt-image" controls></video>
+                    <video src="/images/Limonary/Limonary-5.jpg" alt="Limonary" class="img-fluid abt-image" controls></video>
                   </div>
                   
                </div>
