--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -270,9 +270,8 @@
                   <div>
                     <img src="/images/Limonary/Limonary-4.jpg" alt="Limonary" class="img-fluid abt-image" />
                   </div>
-                  
                   <div>
-                    <video src="/images/Limonary/Limonary-5.jpg" alt="Limonary" class="img-fluid abt-image" controls></video>
+                    <img src="/images/Limonary/Limonary-5.jpg" alt="Limonary" class="img-fluid abt-image" />
                   </div>
                   
                </div>
