--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -427,6 +427,33 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     
+    <!-- owl-carousel -->
+    <script src="./libs/owl-carousel/owl.carousel.min.js"></script>
+    <script>
+    $(document).ready(function () {
+    $(".owl-carousel").owlCarousel({
+        items: 5,
+        loop: true,
+        nav: true,
+        margin: 10,
+        autoplay: true,
+        autoplayTimeout: 3000,
+        autoplayHoverPause: true,
+        responsive: {
+            0: {
+                items: 1
+            },
+            600: {
+                items: 3
+            },
+            1000: {
+                items: 3
+            }
+        }
+    });
+});
+    </script>
+    <!-- //owl-carousel -->
 </body>
 
 </html>
