--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -257,7 +257,7 @@
                                 <ul>
                         </div>
                         <!-- owl-carousel -->
-               <div class="owl-carousel owl-theme" style="width:90%; margin: 0 auto; padding-bottom: 30px;">
+               <div class="owl-carousel owl-theme" style="margin: 0 auto; padding-bottom: 30px;">
                   <div>
                     <img src="/images/Limonary/Limonary-2.jpg" alt="Luminary" class="img-fluid abt-image" />
                   </div>
