--- a/page-LOL.html
+++ b/page-LOL.html
@@ -234,7 +234,7 @@
                                 <ul>
                         </div>
                         <!-- owl-carousel -->
-               <div class="owl-carousel owl-theme" style="width:90%; margin: 0 auto; padding-bottom: 30px;">
+               <div class="owl-carousel owl-theme" style="margin: 0 auto; padding-bottom: 30px;">
                   <div>
                     <img src="/images/LOL/lol-1.jpg" alt="LOL" class="img-fluid abt-image" />
                   </div>
