--- a/page-Beer.html
+++ b/page-Beer.html
@@ -247,7 +247,7 @@
 			<!-- liq pay -->
 			<!--<div id="liqpay_checkout"></div>-->
 	       <!-- owl-carousel -->
-               <div class="owl-carousel owl-theme" style="width:90%; margin: 0 auto; padding-bottom: 30px;">
+               <div class="owl-carousel owl-theme" style="margin: 0 auto; padding-bottom: 30px;">
                   <div>
                     <img src="/images/Beer/beer-1.jpg" alt="beer" class="img-fluid abt-image" />
                   </div>
