--- a/packages.html
+++ b/packages.html
@@ -100,7 +100,7 @@
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Georgia.html"> </a>
                         </h5>
-                        <p class="">Экскурсия и дегустация на винном заводе</p>
+                        <p class="">Экскурсия и дегустация на винном заводе под рассказ сомелье</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Март-Май 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
