--- a/packages.html
+++ b/packages.html
@@ -98,7 +98,7 @@
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-Georgia.html">Вино</a>
+                            <a href="https://novipovorot.pp.ua/page-wine.html">Вино</a>
                         </h5>
                         <p class="">Экскурсия и дегустация на винном заводе под рассказ сомелье</p>
                         <ul class="listing mt-3">
