--- a/booking.html
+++ b/booking.html
@@ -121,7 +121,7 @@
                             </div>
                             <div class="col-md-12 form-group contact-forms">
                                 <select name="Тур" class="form-control" id="#">
-                                    <option>Тур</option>
+                                    <option>Тур:</option>
                                     <option>Вино</option>
                                     <option>Грузия</option>
                                     <option>Tik Tok pati</option>
