--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -109,23 +109,20 @@
                             в Сицилии или Грузии, а частном Лимонном саду
                             города Запорожья. Мы посетим удивительное место, узнаем
                             историю семьи которая растит эти чудо-лимоны, сделаем
-                            фото среди лимонных ветвей. А чтоб не грустить дома
-                            без вкусностей, каждый получит <strong>1 кг</strong> вкуснейших
-                            лимонов с собой!
+                            фото среди лимонных ветвей.
                         </p>
                         <hr>
                         <!-- Alert warning -->
                         <div class="alert alert-warning mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
-                            <span class="txt-alg-jf">В стоимость входит 1 кг лимонов с собой.
-                                180 грн 0-12 лет (в стоимость входит 0.5 кг
-                                лимонов с собой), цена для семей от 2 человек
-                                с детьми, стоимость указана за 1 человека.</span>
+                            <span class="txt-alg-jf">
+                                Цена 150 грн. от 4-200 лет, до 4 лет бесплатно
+                            </span>
                         </div>
                         <!-- //Alert warning -->
                         <ul class="listing">
-                            <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>230 Грн.</span></li>
+                            <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>150 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                         <br>
@@ -202,9 +199,7 @@
                                             Слушаем историю создания этого чуда. Обязательно
                                             делаем фото на память среди лимонных ветвей!
                                             Длительность экскурсии и время для фото всего: 45 минут.
-                                            Получаем с сбой заряд бодрости и витамина С в виде 1 кг
-                                            лимончиков с собой и довольные отправляться к родным и
-                                            близким делиться впечатлениями, фото и вкусными лимонами!
+                                            
                                         </p>
                                         <p>Желательно на экскурсию подготовить удобную обувь!
                                             В Лимонарии температура всего на пару грудусов больше
@@ -217,7 +212,7 @@
                                                 зависимости от состава группы, без изменения
                                                 указанной программы! Группы от 7 до 16 человек,
                                                 возможен заказ индивидуальных экскурсий от 6 до 9
-                                                человек по цене 265 грн/чел.
+                                                человек.
                                             </i></p>
                                     </div>
                                 </div>
@@ -236,9 +231,7 @@
                                 <li class="list-group-item list-group-item-success ">
                                     экскурсия-рассказ о Лимонном саде;
                                 </li>
-                                <li class="list-group-item list-group-item-success ">
-                                    1 кг вкуснейших лимонов с собой каждому (лимоны можно кушать без сахара);
-                                </li>
+                                
                                 <li class="list-group-item list-group-item-success ">
                                     магнит от "Нового поворота".
                                 </li>
