--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -87,11 +87,20 @@
         <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
             <div class="row df-cntr">
 
-                <div class="col-lg-8 col-xl-9 main-title-text">
+                <!--
+		<div class="col-lg-8 col-xl-9 main-title-text">
                     <h3 class="title">Лимонарий</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     <img src="images/Limonariy-max.jpg" alt="news image" class="img-fluid">
+                 -->
+		<div class="col-lg-8 col-xl-6 main-title-text">
+                    <h3 class="title">Лимонарий</h3>
+                </div>
+                <div class="col-lg-8 col-xl-6 blog-left-sub">
+                    <img src="images/Limonariy-max.jpg" alt="news image" class="img-fluid">
+		</div>
+		<div class="col-lg-8 col-xl-9 blog-left-sub">	
                     <div class="blog-two-two">
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
