--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -108,9 +108,11 @@
                                 </li>
                             </ul>
                         </div>
+			    
                         <h4 class="mb-3">
                             Экскурсия в Лимонный сад
                         </h4>
+			</div>
 			</div>
 		        <div class="col-lg-8 col-xl-12 blog-left-sub">	    
                         <p class="txt-alg-jf">
