--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -46,6 +46,13 @@
     <link href="./libs/owl-carousel/owl.carousel.min.css" rel="stylesheet" type='text/css' />
     <link href="./libs/owl-carousel/owl.theme.default.min.css" rel="stylesheet" type='text/css' />
     <!-- //owl-carousel -->
+	
+	<style>
+		@media (max-width: 1170px) {
+			h3.title {font-size: 54px;}
+		}
+	</style>
+	
 </head>
 
 <body>
