--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -94,19 +94,19 @@
         <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
             <div class="row df-cntr">
 
-                <!--
+                
 		<div class="col-lg-8 col-xl-9 main-title-text">
                     <h3 class="title">Лимонарий</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     <img src="images/Limonariy-max.jpg" alt="news image" class="img-fluid">
-                 -->
+                <!--
 		<div class="col-lg-5 col-xl-5 main-title-text">
                     <h3 class="title">Лимонарий</h3>
                 </div>
                 <div class="col-lg-5 col-xl-5 blog-left-sub">
                     <img src="images/Limonariy-max.jpg" alt="news image" class="img-fluid">
-		
+		-->
                     <div class="blog-two-two">
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
@@ -119,9 +119,10 @@
                         <h4 class="mb-3">
                             Экскурсия в Лимонный сад
                         </h4>
+			<!--</div>
 			</div>
-			</div>
-		        <div class="col-lg-10 col-xl-10 blog-left-sub">	    
+		        <div class="col-lg-10 col-xl-10 blog-left-sub">	 
+                        -->   
                         <p class="txt-alg-jf">
                             Яркие сочные лимончики висящие на ветках,
                             интересно, экзотично и необычно ведь мы не
