--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -137,7 +137,7 @@
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
                             <span class="txt-alg-jf">
-                             Последние экскурсии в лимонарий, в 2021 году. 
+                             Последние экскурсии в 2021 году. 
                              Следующие экскурсии не раньше декабря, января. Цена 150 грн. от 4-200 лет, до 4 лет бесплатно
                             </span>
                         </div>
