--- a/page-LOL.html
+++ b/page-LOL.html
@@ -94,7 +94,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано <!-- 21 Февраля 2021 Года --></span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span><!-- Не Запланировано -->3 Апреля 2021 Года </span>
                                 </li>
                             </ul>
                         </div>
@@ -112,7 +112,7 @@
                         </p>
                         <hr>
                         <ul class="listing">
-                            <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>210 Грн.</span></li>
+                            <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>180 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                         <br>
@@ -177,9 +177,9 @@
                                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
-                                        <p><b>12:50</b> - сбор группы и после минутки позитива пешая прогулка до места
+                                        <p><b>11:50</b> - сбор группы и после минутки позитива пешая прогулка до места
                                             начала праздника!</p>
-                                        <p><b>13:00 -14:00</b> - Вас встретит настоящая Лол, мы станцуем зажигательные
+                                        <p><b>12:00 -13:00</b> - Вас встретит настоящая Лол, мы станцуем зажигательные
                                             танцы, поиграем в самые веселые игры.
                                             Распишем яркими сьедобными красками 3 вида пряничков(лол, единорог, сердце).
                                             Угостимся сделаным пряничком на сладком столе с чаем!
