--- a/packages.html
+++ b/packages.html
@@ -281,7 +281,7 @@
                         <a href="https://novipovorot.pp.ua/page-LOL.html">
                             <img src="images/lol-mini.jpg" alt="LOL" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>170грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span>180грн.</span></p>
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
@@ -292,7 +292,7 @@
                         </h5>
                         <p class="">Праздник в стиле Лол с любимыми персонажами!</p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>3 Апреля</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
