--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                         <a href="https://novipovorot.pp.ua/page-Limonariy.html">
                             <img src="images/Limonariy-mini.jpg" alt="Лимонарий" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>230грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span>180грн.</span></p>
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
@@ -424,7 +424,7 @@
                         </h5>
                         <p class="">Экскурсия в Лимонный сад с Новым поворотом </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>14 Марта 2021 Года</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>3 Апреля 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
