--- a/index.html
+++ b/index.html
@@ -387,8 +387,33 @@
                 </div>
                 <!--  //Турция  -->
 
+                <!--  TikTok -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-TicToc-pati.html">
+                            <img src="images/TicToc-mini.jpg" alt="LOL" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>215грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-TicToc-pati.html">
+                                Tik Tok pati
+                            </a>
+                        </h5>
+                        <p class="">
+                         Праздник и мастер класс с Новым поворотом
+                        </p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>20 Марта 2021 Года</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //TikTok-->
                 <!--  Одесса  -->
-                <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
+              <!--  <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">
                             <img src="images/Odessa-mini.jpg" alt="Odessa" class="img-fluid" />
@@ -404,7 +429,7 @@
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span></li>
                         </ul>
                     </div>
-                </div>
+                </div>-->
                 <!--  //Одесса  -->
 
                 <!--  Лимонарий  -->
@@ -464,6 +489,7 @@
             <h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Популярные Направления</h3>
             <p class="text mt-2 mb-5 text-center">Туры выходного дня "Новый Поворот"</p>
             <div class="row inner-sec-w3layouts-w3pvt-lauinfo">
+
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
                     <h4 class="destination mb-3">Лимонарий</h4>
                     <div class="image-position position-relative">
@@ -487,11 +513,12 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3">Одесса</h4>
+                    <h4 class="destination mb-3">Tik Tok pati</h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">
-                            <img src="images/Odessa-max.jpg" class="img-fluid" alt="Одесса">
+                        <a href="https://novipovorot.pp.ua/page-TicToc-pati.html">
+                            <img src="images/TicToc-max.jpg" class="img-fluid" alt="Tik Tok">
                         </a>
                         <div class="rating">
                             <ul>
@@ -505,11 +532,12 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>Одесса</h4>
+                            <h4>Tik Tok pati</h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
+
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
                     <h4 class="destination mb-3">Пиво</h4>
                     <div class="image-position position-relative">
@@ -533,6 +561,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
                     <h4 class="destination mb-3">Турция</h4>
                     <div class="image-position position-relative">
