--- a/packages.html
+++ b/packages.html
@@ -436,12 +436,12 @@
                 </div>
                 <!--  //Лимонарий   -->
 
-                <!--  Одесса   -->
+                <!--  Tik Tok   -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3">Одесса</h4>
+                    <h4 class="destination mb-3">Tik Tok pati</h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">
-                            <img src="images/Odessa-max.jpg" class="img-fluid" alt="Одесса">
+                        <a href="https://novipovorot.pp.ua/page-TicToc-pati.html">
+                            <img src="images/TicToc-max.jpg" class="img-fluid" alt="Tik Tok">
                         </a>
                         <div class="rating">
                             <ul>
@@ -455,12 +455,12 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>Одесса</h4>
+                            <h4>Tik Tok pati</h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!--  //Одесса   -->
+                <!--  //Tik Tok   -->
 
                 <!--  Пиво   -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
