--- a/index.html
+++ b/index.html
@@ -387,31 +387,32 @@
                 </div>
                 <!--  //Турция  -->
 
-                <!--  TikTok -->
+                <!--  LOL -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-TicToc-pati.html">
-                            <img src="images/TicToc-mini.jpg" alt="LOL" class="img-fluid" />
+                        <a href="https://novipovorot.pp.ua/page-LOL.html">
+                            <img src="images/lol-mini.jpg" alt="LOL" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>215грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span>180грн.</span></p>
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-TicToc-pati.html">
-                                Tik Tok pati
+                            <a href="https://novipovorot.pp.ua/page-LOL.html">
+                               ЛОЛ
                             </a>
                         </h5>
                         <p class="">
-                         Праздник и мастер класс с Новым поворотом
+                         Праздник в стиле Лол с любимыми персонажами!
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>20 Марта 2021 Года</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 3 Апреля 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
                 </div>
-                <!--  //TikTok-->
+                <!--  //LOL -->
+
                 <!--  Одесса  -->
               <!--  <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
@@ -515,10 +516,10 @@
                 </div>
 
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3">Tik Tok pati</h4>
+                    <h4 class="destination mb-3">LOL</h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-TicToc-pati.html">
-                            <img src="images/TicToc-max.jpg" class="img-fluid" alt="Tik Tok">
+                        <a href="https://novipovorot.pp.ua/page-LOL.html">
+                            <img src="images/lol-max.jpg" class="img-fluid" alt="Tik Tok">
                         </a>
                         <div class="rating">
                             <ul>
@@ -532,7 +533,7 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>Tik Tok pati</h4>
+                            <h4>LOL</h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
