--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                 </div>
 
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3">LOL</h4>
+                    <h4 class="destination mb-3">ЛОЛ</h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-LOL.html">
                             <img src="images/lol-max.jpg" class="img-fluid" alt="Tik Tok">
@@ -533,7 +533,7 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>LOL</h4>
+                            <h4>ЛОЛ</h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
