--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -273,10 +273,10 @@
                         <!-- owl-carousel -->
                <div class="owl-carousel owl-theme" style="margin: 0 auto; padding-bottom: 30px;">
                   <div>
-                    <img src="/images/Limonary/Limonary-2.jpg" alt="Luminary" class="img-fluid abt-image" />
+                    <img src="/images/Limonary/Limonary-2.jpg" alt="Limonary" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src=" /images/Limonary/Limonary-1.jpg " alt="Luminary" class="img-fluid abt-image" />
+                    <img src=" /images/Limonary/Limonary-1.jpg " alt="Limonary" class="img-fluid abt-image" />
                   </div>
                   <div>
                     <img src="/images/Limonary/Limonary-3.jpg" alt="Limonary" class="img-fluid abt-image" />
@@ -288,10 +288,10 @@
                     <img src="/images/Limonary/Limonary-5.jpg" alt="Limonary" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="/images/Limonary/Limonary-7.jpg" alt="Luminary" class="img-fluid abt-image" />
+                    <img src="/images/Limonary/Limonary-6.jpg" alt="Limonary" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src=" /images/Limonary/Limonary-8.jpg " alt="Luminary" class="img-fluid abt-image" />
+                    <img src=" /images/Limonary/Limonary-8.jpg " alt="Limonary" class="img-fluid abt-image" />
                   </div>
                   <div>
                     <img src="/images/Limonary/Limonary-9.jpg" alt="Limonary" class="img-fluid abt-image" />
