--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -287,9 +287,9 @@
                   <div>
                     <img src="/images/Limonary/Limonary-5.jpg" alt="Limonary" class="img-fluid abt-image" />
                   </div>
-                  <div>
+                  <!--<div>
                     <img src="/images/Limonary/Limonary-6.jpg" alt="Limonary" class="img-fluid abt-image" />
-                  </div>
+                  </div>-->
                   <div>
                     <img src=" /images/Limonary/Limonary-8.jpg " alt="Limonary" class="img-fluid abt-image" />
                   </div>
