--- a/page-zoo.html
+++ b/page-zoo.html
@@ -3,7 +3,7 @@
 <html lang="ru">
 
 <head>
-<title>Пылышенко | Замок Попова | Панское озеро || Новый поворот</title>
+<title>Центр Пылышенко | Замок Попова | Панское озеро || Новый поворот</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="description" content="Туры выходного дня 'Новый поворот', Пылышенко | Замок Попова | Панское озеро, Экскурсии Запорожье | Экскурсии выходного дня | Мастер классы ">
@@ -102,7 +102,7 @@
             <div class="row df-cntr">
 
                 <div class="col-lg-8 col-xl-9 main-title-text">
-                    <h3 class="title">Вино</h3>
+                    <h3 class="title">Экскурсия</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     <img src="images/zoo-max.jpg" alt="news image" class="img-fluid">
