--- a/page-zoo.html
+++ b/page-zoo.html
@@ -117,12 +117,12 @@
                         <h4 class="mb-3">
                            Экскурсия Центр Пылышенко - Замок Попова - Панское озеро.
                         </h4>
-                      <p class="bg-success text-white">Благотворительная акция - накорми льва!</p>
+                      <p class="p-1 bg-success text-white">Благотворительная акция - накорми льва!</p>
                         <p class="txt-alg-jf">
                             За 1 день экскурсии с нами ВЫ получите заряд здоровья и отличного настроения,
                             забудете Ваши печали и заботы, проведете время с близкими! Безопасно, комфортно, весело!
                         </p>
-                      <p class="bg-secondary text-white">
+                      <p class="p-1 bg-secondary text-white">
                       35 дней в клетке со львами, 16 лет Реабилитационного Центра,
                         беcчисленное количество спасенных жизней животных - 
                         Александр Пылышенко гордость нашего Запорожского края!
