--- a/packages.html
+++ b/packages.html
@@ -105,6 +105,28 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             <div class="row">
        
+		 <!--  Zoo-->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-zoo.html">
+                            <img src="images/wine-min.jpg" alt="Wine" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>335грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-zoo.html">Экскурсия</a>
+                        </h5>
+                        <p class="">Центр Пылышенко | Замок Попова | Панское озеро</p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>10 Апреля 2021 Года</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Zoo -->    
+		    
                 <!--  Вино -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
