--- a/page-zoo.html
+++ b/page-zoo.html
@@ -115,7 +115,7 @@
                             </ul>
                         </div>
                         <h4 class="mb-3">
-                           Центр Пылышенко - Замок Попова - Панское озеро.
+                           Центр Пылышенко - Замок Попова - Панское озеро
                         </h4>
                       <p class="p-2 bg-success text-white">Благотворительная акция - накорми льва!</p>
                         <p class="txt-alg-jf">
