--- a/page-zoo.html
+++ b/page-zoo.html
@@ -218,27 +218,27 @@
                                         <p><strong>09:45 </strong>
                                              выезд с центра Запорожья после минутки позитива. 
                                         </p>
-                                        <p><strong>10:45-12:45 м</strong>
+                                        <p><strong>10:45-12:45</strong>
                                             мы в Центре Пылышенко, слушаем удивительную
                                           историю создания Зоопарка и знакомимся с животными:
                                           милыми мишками, смешными енотиками, величественными 
                                           тирами и конечно грациозными 
                                           львами! Делаем самые красивые фото на память. Перекус бутербродиком из дома если проголодались.
-                                          Оставляем денежку от Нас на питание животным и продолжаем свой путь
-                                          <strong>3:00-14:00 </strong>Посещаем мистический Замок Попова! 
-                                          Говорят в замке живет настоящее привидение, может встретим его  *посещение по желанию, доп.оплата. 
+                                          Оставляем денежку от Нас на питание животным и продолжаем свой путь.<br/>
+                                          <strong>03:00-14:00 </strong>Посещаем мистический Замок Попова! 
+                                          Говорят в замке живет настоящее привидение, может встретим его  *посещение по желанию, доп.оплата.<br/> 
                                           <strong>14:40-15:40 </strong>Панское озеро с волшебным родником.
                                           Все желающие смогут искупаться в этом целебнейшем озере тем.воды +12.
                                           Если будет хорошая погода, обязательно посетим родник и наберем с собой вкуснейшей воды! 
-                                          Загадаем желание и оно обязательно сбудется.
-                                         <strong> 16:20 </strong>мы уже в Запорожье, довольные возвращаемся 
-                                          домой чтоб поделится впечатлениями с друзьями и близкими (но еще лучше их взять с собой)
+                                          Загадаем желание и оно обязательно сбудется.<br/>
+                                         <strong>16:20</strong>мы уже в Запорожье, довольные возвращаемся 
+                                          домой чтоб поделится впечатлениями с друзьями и близкими (но еще лучше их взять с собой).
                                         </p>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                       -->
+                     
                         <!-- //Описание экскурсии -->
                       
                         <div class="alert alert-success">
