--- a/page-zoo.html
+++ b/page-zoo.html
@@ -224,14 +224,14 @@
                                           милыми мишками, смешными енотиками, величественными 
                                           тирами и конечно грациозными 
                                           львами! Делаем самые красивые фото на память. Перекус бутербродиком из дома если проголодались.
-                                          Оставляем денежку от Нас на питание животным и продолжаем свой путь.<br/>
-                                          <strong>03:00-14:00 </strong>Посещаем мистический Замок Попова! 
-                                          Говорят в замке живет настоящее привидение, может встретим его  *посещение по желанию, доп.оплата.<br/> 
-                                          <strong>14:40-15:40 </strong>Панское озеро с волшебным родником.
+                                          Оставляем денежку от Нас на питание животным и продолжаем свой путь.<p/>
+                                          <p><strong>03:00-14:00 </strong>Посещаем мистический Замок Попова! 
+                                          Говорят в замке живет настоящее привидение, может встретим его  *посещение по желанию, доп.оплата.<p/> 
+                                          <p><strong>14:40-15:40 </strong>Панское озеро с волшебным родником.
                                           Все желающие смогут искупаться в этом целебнейшем озере тем.воды +12.
                                           Если будет хорошая погода, обязательно посетим родник и наберем с собой вкуснейшей воды! 
-                                          Загадаем желание и оно обязательно сбудется.<br/>
-                                         <strong>16:20</strong>мы уже в Запорожье, довольные возвращаемся 
+                                          Загадаем желание и оно обязательно сбудется.<p/>
+                                          <p><strong>16:20</strong>мы уже в Запорожье, довольные возвращаемся 
                                           домой чтоб поделится впечатлениями с друзьями и близкими (но еще лучше их взять с собой).
                                         </p>
                                     </div>
