--- a/page-zoo.html
+++ b/page-zoo.html
@@ -122,7 +122,7 @@
                             За 1 день экскурсии с нами ВЫ получите заряд здоровья и отличного настроения,
                             забудете Ваши печали и заботы, проведете время с близкими! Безопасно, комфортно, весело!
                         </p>
-                      <p class="p-2 bg-secondary text-white">
+                      <p class="p-2 bg-light">
                       35 дней в клетке со львами, 16 лет Реабилитационного Центра,
                         беcчисленное количество спасенных жизней животных - 
                         Александр Пылышенко гордость нашего Запорожского края!
