--- a/packages.html
+++ b/packages.html
@@ -109,7 +109,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-zoo.html">
-                            <img src="images/wine-min.jpg" alt="Wine" class="img-fluid" />
+                            <img src="images/zoo-min.jpg" alt="Wine" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>335грн.</span></p>
                     </div>
