--- a/packages.html
+++ b/packages.html
@@ -118,7 +118,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-zoo.html">Экскурсия</a>
                         </h5>
-                        <p class="">Центр Пылышенко | Замок Попова | Панское озеро</p>
+                        <p class="">Центр Пылышенко-Замок-Oзеро</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>10 Апреля 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
