--- a/page-zoo.html
+++ b/page-zoo.html
@@ -216,10 +216,10 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
                                         <p><strong>09:45 </strong>
-                                             выезд с центра Запорожья после минутки позитива. 
+                                             Выезд с центра Запорожья после минутки позитива. 
                                         </p>
                                         <p><strong>10:45-12:45</strong>
-                                            мы в Центре Пылышенко, слушаем удивительную
+                                            Мы в Центре Пылышенко, слушаем удивительную
                                           историю создания Зоопарка и знакомимся с животными:
                                           милыми мишками, смешными енотиками, величественными 
                                           тирами и конечно грациозными 
@@ -227,11 +227,11 @@
                                           Оставляем денежку от Нас на питание животным и продолжаем свой путь.<p/>
                                           <p><strong>03:00-14:00 </strong>Посещаем мистический Замок Попова! 
                                           Говорят в замке живет настоящее привидение, может встретим его  *посещение по желанию, доп.оплата.<p/> 
-                                          <p><strong>14:40-15:40 </strong>Панское озеро с волшебным родником.
+                                          <p><strong>14:40-15:40 </strong> Панское озеро с волшебным родником.
                                           Все желающие смогут искупаться в этом целебнейшем озере тем.воды +12.
                                           Если будет хорошая погода, обязательно посетим родник и наберем с собой вкуснейшей воды! 
                                           Загадаем желание и оно обязательно сбудется.<p/>
-                                          <p><strong>16:20</strong>мы уже в Запорожье, довольные возвращаемся 
+                                          <p><strong>16:20</strong> Мы уже в Запорожье, довольные возвращаемся 
                                           домой чтоб поделится впечатлениями с друзьями и близкими (но еще лучше их взять с собой).
                                         </p>
                                     </div>
