--- a/page-zoo.html
+++ b/page-zoo.html
@@ -117,7 +117,7 @@
                         <h4 class="mb-3">
                            Центр Пылышенко - Замок Попова - Панское озеро
                         </h4>
-                      <p class="p-2 bg-success text-white">Благотворительная акция - накорми льва!</p>
+                      <p class="p-2 bg-success text-white">Благотворительная Акция - накорми ЛЬВА!</p>
                         <p class="txt-alg-jf">
                             За 1 день экскурсии с нами ВЫ получите заряд здоровья и отличного настроения,
                             забудете Ваши печали и заботы, проведете время с близкими! Безопасно, комфортно, весело!
@@ -227,7 +227,7 @@
                                           Оставляем денежку от Нас на питание животным и продолжаем свой путь.<p/>
                                           <p><strong>03:00-14:00 </strong>Посещаем мистический Замок Попова! 
                                           Говорят в замке живет настоящее привидение, может встретим его  *посещение по желанию, доп.оплата.<p/> 
-                                          <p><strong>14:40-15:40 </strong> Панское озеро с волшебным родником.
+                                          <p><strong>14:40-15:40 </strong>Панское озеро с волшебным родником.
                                           Все желающие смогут искупаться в этом целебнейшем озере тем.воды +12.
                                           Если будет хорошая погода, обязательно посетим родник и наберем с собой вкуснейшей воды! 
                                           Загадаем желание и оно обязательно сбудется.<p/>
