--- a/page-zoo.html
+++ b/page-zoo.html
@@ -6,11 +6,11 @@
 <title>Центр Пылышенко | Замок Попова | Панское озеро || Новый поворот</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="description" content="Туры выходного дня 'Новый поворот', Пылышенко | Замок Попова | Панское озеро, Экскурсии Запорожье | Экскурсии выходного дня | Мастер классы ">
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Центр Пылышенко  | Замок Попова | Панское озеро, Экскурсии Запорожье | Экскурсии выходного дня | Мастер классы ">
    
     <!-- Open Graph data-->
-    <meta property="og:title" content="Пылышенко | Замок Попова | Панское озеро">
-    <meta property="og:description" content="Пылышенко | Замок Попова | Панское озеро"/>
+    <meta property="og:title" content="Центр Пылышенко  | Замок Попова | Панское озеро">
+    <meta property="og:description" content="Центр Пылышенко  | Замок Попова | Панское озеро"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://novipovorot.pp.ua/page-zoo.html"/>
     <meta property="og:image" content="images/zoo-max.jpg">
