--- a/page-zoo.html
+++ b/page-zoo.html
@@ -3,14 +3,14 @@
 <html lang="ru">
 
 <head>
-<title>Центр Пылышенко | Замок Попова | Панское озеро || Новый поворот</title>
+<title>Зоопарк Пылышенко | Замок Попова | Панское озеро || Новый поворот</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="description" content="Туры выходного дня 'Новый поворот', Центр Пылышенко  | Замок Попова | Панское озеро, Экскурсии Запорожье | Экскурсии выходного дня | Мастер классы ">
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Зоопарк Пылышенко  | Замок Попова | Панское озеро, Экскурсии Запорожье | Экскурсии выходного дня | Мастер классы ">
    
     <!-- Open Graph data-->
-    <meta property="og:title" content="Центр Пылышенко  | Замок Попова | Панское озеро">
-    <meta property="og:description" content="Центр Пылышенко  | Замок Попова | Панское озеро"/>
+    <meta property="og:title" content="Зоопарк Пылышенко  | Замок Попова | Панское озеро">
+    <meta property="og:description" content="Зоопарк Пылышенко  | Замок Попова | Панское озеро"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://novipovorot.pp.ua/page-zoo.html"/>
     <meta property="og:image" content="images/zoo-max.jpg">
@@ -115,7 +115,7 @@
                             </ul>
                         </div>
                         <h4 class="mb-3">
-                           Центр Пылышенко - Замок Попова - Панское озеро
+                           Зоопарк Пылышенко - Замок Попова - Панское озеро
                         </h4>
                       <p class="p-2 bg-success text-white">Благотворительная Акция - накорми ЛЬВА!</p>
                         <p class="txt-alg-jf">
@@ -219,7 +219,7 @@
                                              Выезд с центра Запорожья после минутки позитива. 
                                         </p>
                                         <p><strong>10:45-12:45</strong>
-                                            Мы в Центре Пылышенко, слушаем удивительную
+                                            Мы в Зоопарке Пылышенко, слушаем удивительную
                                           историю создания Зоопарка и знакомимся с животными:
                                           милыми мишками, смешными енотиками, величественными 
                                           тирами и конечно грациозными 
