--- a/booking.html
+++ b/booking.html
@@ -141,6 +141,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                             <div class="col-md-12 form-group contact-forms">
                                 <select name="Тур" class="form-control" id="#">
                                     <option>Тур</option>
+                                    <option>Зоопарк Пылышенко-Замок-Озеро</option>
                                     <option>Вино</option>
                                     <option>Грузия</option>
                                     <option>Tik Tok pati</option>
