--- a/page-Beer.html
+++ b/page-Beer.html
@@ -104,6 +104,18 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
         <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
             <div class="row df-cntr">
 
+              <!-- Хлебные крошки -->
+              <div class="col-lg-8 col-xl-9 ">
+                <nav aria-label="breadcrumb">
+                  <ol class="breadcrumb">
+                     <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
+                     <li class="breadcrumb-item"><a href="packages.html">Туры</a></li>
+                     <li class="breadcrumb-item active" aria-current="page">Пиво</li>
+                   </ol>
+                </nav>
+              </div>
+              <!-- //Хлебные крошки -->
+
                 <div class="col-lg-8 col-xl-9 main-title-text">
                     <h3 class="title">Пиво</h3>
                 </div>
