--- a/page-Beer.html
+++ b/page-Beer.html
@@ -106,6 +106,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
 
               <!-- Хлебные крошки -->
               <div class="col-lg-8 col-xl-9 ">
+               <div class="col-lg-4 col-xl-4 ">
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb">
                      <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
@@ -113,6 +114,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                      <li class="breadcrumb-item active" aria-current="page">Пиво</li>
                    </ol>
                 </nav>
+               </div>
               </div>
               <!-- //Хлебные крошки -->
 
